Demo/manual test starter for Styx (#732)